[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI/Online.gd" type="Script" id=1]

[node name="Online" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.266667, 0.266667, 0.266667, 1 )

[node name="Host" type="Button" parent="."]
margin_left = 462.0
margin_top = 250.0
margin_right = 562.0
margin_bottom = 290.0
text = "Host"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Join" type="Button" parent="."]
margin_left = 462.0
margin_top = 300.0
margin_right = 562.0
margin_bottom = 340.0
text = "Join"

[node name="Back" type="Button" parent="."]
margin_left = 462.0
margin_top = 350.0
margin_right = 562.0
margin_bottom = 390.0
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 1024.0
margin_top = 600.0
margin_right = 1064.0
margin_bottom = 614.0
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Host" to="." method="_on_Host_pressed"]
[connection signal="pressed" from="Join" to="." method="_on_Join_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
